# orthonaut

./: .gitignore  LICENSE  Makefile  Procfile  README.md  applicaton.md  claude.md  orthonaut.toml.example  requirements-edit.md  requirements.md  setup.sh  toolforge.sh  wordfixer.toml.example
.github/workflows/: deploy.yml
backend/: Cargo.toml  ortobot.db  ortobot.toml  wordfixer.db
backend/dictionaries/: always_wrong.txt  es_ES.aff  es_ES.dic  suppressions.txt
backend/src/: api.rs  checker.rs  config.rs  db.rs  extractor.rs  main.rs  oauth.rs  reporter.rs  wikipedia.rs  wordlists.rs
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  constants.ts  index.css  types.ts
frontend/src/components/: AlwaysWrongWordsManager.tsx  CheckForm.tsx  LoadingSpinner.tsx  ResultRow.tsx
